add some TODO items
darcs-hash:20060214161432-2fc9d-4937c4638cee0e759259a7a11bc4eeb8730621fc.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -143,6 +143,8 @@ a nightly updated archive is available at
 
 A rpm package for Mandriva Linux will be available soon.
 
+TODO: provide more binary packages - for mac and windows.
+
     \subsubsection{CableSwig}
 
 WrapITK requires ITK and CableSwig to have been previously downloaded and built.
@@ -425,8 +427,9 @@ can be called with a 3D image as parameter to show the image slice by slice.
 \caption{A screenshot of WrapITK in action.\label{screenshot}}
 \end{figure}
 
-
   \item \verb$itk.strel$
+
+  \item \verb$itk.auto_progress$
 
 \end{itemize}
 
@@ -667,6 +670,7 @@ directory.
 
     \subsubsection{ItkVtkGlue: an example of extension for all languages, including C++}
 
+TODO: rename ItkVtk to ItkVtkGlue to avoid problems wiht non-case sensitive filesystems.
 
   \subsection{Extending language support and adding more languages}
 
@@ -675,6 +679,12 @@ directory.
     \subsubsection{typemaps}
 
   \subsection{Contributing to WrapITK}
+
+- test
+- Work on tcl, java, and others
+- add more classes
+
+talk about darcs
 
 \section{Acknowledgments}
 
