add the command to the auto_progress example
darcs-hash:20060217183059-2fc9d-92bc72e412521871f20a27816d408c42cf37ec2a.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -433,8 +433,9 @@ can be called with a 3D image as parameter to show the image slice by slice.
 
   \item \verb$itk.auto_progress( b )$ is used to automatically add a progress report
 to all the newly created filters. \verb$b$ must be \verb$True$ or \verb$False$. If
-\verb$b$ is true, a line like
+\verb$b$ is true, something like
 \begin{verbatim}
+9> median.Update()
 itkMedianImageFilterIF2IF2: 0.109990
 \end{verbatim}
 is displayed on the standard output. 
