--- a/article/Article.tex
+++ b/article/Article.tex
@@ -698,7 +698,7 @@ template instantiation brackets. (Do not include the brackets.) If you are
 wrapping a filter, there are simpler macros to use, which are defined at the
 bottom of \verb$CreateCableSwigInputs$ and described below.
 
-  \item \verb$COND_WRAP("mangled_suffix" "template parameters" "type list")$
+  \item \verb$WRAP_TYPES("mangled_suffix" "template parameters" "type list")$
 
   \item \verb$WRAP_type(size)$ (where 'type' is \verb$INT$, \verb$SIGN_INT$, \verb$REAL$, \verb$VECTOR_REAL$,
 \verb$COV_VECTOR_REAL$ or \verb$RGB$) -- create a template instantiation with 'size'
