Code cleaning and re-organization
darcs-hash:20060225111055-733a7-036ae5e88e995c642252eb1b668981fc5daa5a4c.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -628,7 +628,7 @@ WRAPPER_LIBRARY_CREATE_LIBRARY()
 
 \begin{itemize}
   \item \verb$BEGIN_WRAPPER_LIBRARY()$ sets up the environment to wrap a set of classes into a
-library with a given name. This macro is defined in \verb$itkConfigWrapping.cmake$
+library with a given name. This macro is defined in \verb$ConfigureWrapping.cmake$
 \verb$WRAPPER_LIBRARY_DEPENDS$ stores the list of WrapITK libraries on which the
 current library depends (e.g. which libraries wrap classes like \verb$Image$ or
 \verb$SpatialObject$, that are going to be used in the current library). Every project
