--- a/article/Article.tex
+++ b/article/Article.tex
@@ -221,7 +221,7 @@ floating point types (e.g. double or float) in ccmake. Thus, the ccmake
 configuration specifies the maximum possible range of image and filter types to
 be created, and each filter is wrapped for some subset of that range. 
 
-Project should always be built outside the source directory, in a \veb$build$
+Project should always be built outside the source directory, in a \verb$build$
 directory for example.
 
     \subsubsection{Install WrapITK or use it in the build tree}
