add a note about article status
darcs-hash:20060322102716-2fc9d-e829b2f6f0a9b1af82b4f51f304765422fde9a20.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -117,12 +117,14 @@ Python. This is not the case in the standard ITK wrappers.
 
 \end{itemize}
 
-Currently, WrapITK only supports Python properly; Java and Tcl libraries build
+Currently, WrapITK have been tested on Mandriva Linux, and MacOS X, and only
+supports Python properly; Java and Tcl libraries build
 correctly but the Java and Tcl support classes for loading these libraries needs
 some updating.
 
-It have been tested on Mandriva Linux, and MacOS X.
-
+The article you're reading is not as nice and complete than what we would have
+done, but it seems important to us to release our work and to get feedbacks
+as soon as possible. The article will continue to evolve with WrapITK.
 
 
 \section{User guide}
