give url to download the rpm packages
darcs-hash:20060322120431-2fc9d-3030ebcad1bcf475e067a7389db25364eabe8405.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -143,7 +143,7 @@ For the user which don't want to use darcs but want the last development version
 a nightly updated archive is available at
 \url{http://voxel.jouy.inra.fr/darcs/contrib-itk/WrapITK/WrapITK.tar.gz}.
 
-A rpm package for Mandriva Linux will be available soon.
+RPM packages for Mandriva Linux 2006 are available at \url{http://voxel.jouy.inra.fr/mdk/mima2}.
 
 TODO: provide more binary packages - for mac and windows.
 
