comment are remove TODO items
darcs-hash:20060322120514-2fc9d-96e9321d8e9e9ebc8e54a8e461441b48796a915a.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -145,7 +145,7 @@ a nightly updated archive is available at
 
 RPM packages for Mandriva Linux 2006 are available at \url{http://voxel.jouy.inra.fr/mdk/mima2}.
 
-TODO: provide more binary packages - for mac and windows.
+% TODO: provide more binary packages - for mac and windows.
 
     \subsubsection{CableSwig}
 
@@ -849,8 +849,6 @@ directory.
     \subsubsection{BufferConversion: an example of extension for one language}
 
     \subsubsection{ItkVtkGlue: an example of extension for all languages, including C++}
-
-TODO: rename ItkVtk to ItkVtkGlue to avoid problems wiht non-case sensitive filesystems.
 
   \subsection{Extending language support and adding more languages}
 
