--- a/article/Article.tex
+++ b/article/Article.tex
@@ -882,7 +882,17 @@ repository is available at \url{http://voxel.jouy.inra.fr/darcsweb/}.
 
 
 \section{Acknowledgments}
+I thank Dr Pierre Adenot and all the {\em Embryon et Biotechnologie} team for their
+patience during the long development time before getting a tool really usable.
 
+I also thank Richard Beare for his early interest in using itk with python, and for
+his useful feedbacks.
+
+Thank to Charl P. Botha for is help to debug WrapITK on windows plateform and for the
+patches he has contributed.
+
+Finally, we thank the ITK developers for the great tool which is ITK, and for the
+previous work done on wrapping system - without it WrapITK would not be there.
 
 
 \section{Conclusion}
