--- a/article/Article.tex
+++ b/article/Article.tex
@@ -897,6 +897,11 @@ previous work done on wrapping system - without it WrapITK would not be there.
 
 \section{Conclusion}
 
+ITK is a great library, with the drawback to be nearly unusable for prototyping,
+and to have a poor support for other languages than C++. WrapITK address those
+issue and finally give to ITK a quite good support for python. We hope that support
+will soon be extended to tcl and java.
+
 
 
 % \url{http://www.itk.org}
